globex/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: globex-prod
  name: globex-prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: globex-prod
  type: ClusterIP
