globex/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex
spec:
  ingressClassName: nginx
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /globex-prod
